# pvr.stalker

./: .gitignore  .travis.yml  CMakeLists.txt  FindJsonCpp.cmake  Makefile.am  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
addon/: addon.xml.in  cache.xml  changelog.txt
addon/resources/: settings.xml
addon/resources/language/English/: strings.po
debian/: changelog  changelog.in  control  copyright  kodi-pvr-stalker.install  rules
depends/common/jsoncpp/: CMakeLists.txt  jsoncpp.sha256  jsoncpp.txt
depends/common/libxml2/: CMakeLists.txt  libxml2.txt
depends/common/zlib/: 01-build-static.patch  zlib.txt
depends/windows/libxml2/: CMakeLists.txt
depends/windowsstore/libxml2/: 02-fix-uwp-api.patch  CMakeLists.txt
lib/libstalkerclient/: CMakeLists.txt  action.h  identity.c  identity.h  itv.c  itv.h  list.c  list.h  param.c  param.h  request.c  request.h  stb.c  stb.h  type.h  util.c  util.h  watchdog.c  watchdog.h  xmltv.c  xmltv.h
lib/libstalkerclient/nbproject/: project.xml
lib/libstalkerclient/project/VS2010Express/: libstalkerclient.vcxproj
project/VS2010Express/: pvrclient_stalker_client.vcxproj  pvrclient_stalker_client.vcxproj.filters
pvr.stalker/: addon.xml  addon.xml.in  changelog.txt
pvr.stalker.client/: addon.xml
pvr.stalker.client/resources/language/English/: strings.po
pvr.stalker/resources/: instance-settings.xml  settings.xml
pvr.stalker/resources/language/English/: strings.po
pvr.stalker/resources/language/resource.language.af_za/: strings.po
pvr.stalker/resources/language/resource.language.am_et/: strings.po
pvr.stalker/resources/language/resource.language.ar_sa/: strings.po
pvr.stalker/resources/language/resource.language.ast_es/: strings.po
pvr.stalker/resources/language/resource.language.az_az/: strings.po
pvr.stalker/resources/language/resource.language.be_by/: strings.po
pvr.stalker/resources/language/resource.language.bg_bg/: strings.po
pvr.stalker/resources/language/resource.language.bs_ba/: strings.po
pvr.stalker/resources/language/resource.language.ca_es/: strings.po
pvr.stalker/resources/language/resource.language.cs_cz/: strings.po
pvr.stalker/resources/language/resource.language.cy_gb/: strings.po
pvr.stalker/resources/language/resource.language.da_dk/: strings.po
pvr.stalker/resources/language/resource.language.de_de/: strings.po
pvr.stalker/resources/language/resource.language.el_gr/: strings.po
pvr.stalker/resources/language/resource.language.en_au/: strings.po
pvr.stalker/resources/language/resource.language.en_gb/: strings.po
pvr.stalker/resources/language/resource.language.en_nz/: strings.po
pvr.stalker/resources/language/resource.language.en_us/: strings.po
pvr.stalker/resources/language/resource.language.eo/: strings.po
pvr.stalker/resources/language/resource.language.es_ar/: strings.po
pvr.stalker/resources/language/resource.language.es_es/: strings.po
pvr.stalker/resources/language/resource.language.es_mx/: strings.po
pvr.stalker/resources/language/resource.language.et_ee/: strings.po
pvr.stalker/resources/language/resource.language.eu_es/: strings.po
pvr.stalker/resources/language/resource.language.fa_af/: strings.po
pvr.stalker/resources/language/resource.language.fa_ir/: strings.po
pvr.stalker/resources/language/resource.language.fi_fi/: strings.po
pvr.stalker/resources/language/resource.language.fo_fo/: strings.po
pvr.stalker/resources/language/resource.language.fr_ca/: strings.po
pvr.stalker/resources/language/resource.language.fr_fr/: strings.po
pvr.stalker/resources/language/resource.language.gl_es/: strings.po
pvr.stalker/resources/language/resource.language.he_il/: strings.po
pvr.stalker/resources/language/resource.language.hi_in/: strings.po
pvr.stalker/resources/language/resource.language.hr_hr/: strings.po
pvr.stalker/resources/language/resource.language.hu_hu/: strings.po
pvr.stalker/resources/language/resource.language.hy_am/: strings.po
pvr.stalker/resources/language/resource.language.id_id/: strings.po
pvr.stalker/resources/language/resource.language.is_is/: strings.po
pvr.stalker/resources/language/resource.language.it_it/: strings.po
pvr.stalker/resources/language/resource.language.ja_jp/: strings.po
pvr.stalker/resources/language/resource.language.ko_kr/: strings.po
pvr.stalker/resources/language/resource.language.lt_lt/: strings.po
pvr.stalker/resources/language/resource.language.lv_lv/: strings.po
pvr.stalker/resources/language/resource.language.mi/: strings.po
pvr.stalker/resources/language/resource.language.mk_mk/: strings.po
pvr.stalker/resources/language/resource.language.ml_in/: strings.po
pvr.stalker/resources/language/resource.language.mn_mn/: strings.po
src/: AddonSettings.cpp  AddonSettings.h  CWatchdog.cpp  CWatchdog.h  ChannelManager.cpp  ChannelManager.h  Error.h  GuideManager.cpp  GuideManager.h  HTTPSocket.cpp  HTTPSocket.h  InstanceSettings.cpp  InstanceSettings.h  PVRDemoData.cpp  PVRDemoData.h  SAPI.cpp  SAPI.h  SData.cpp  SData.h  SessionManager.cpp  SessionManager.h  Settings.h  SettingsMigration.cpp  SettingsMigration.h  StalkerInstance.cpp  StalkerInstance.h  Utils.cpp  Utils.h  XMLTV.cpp  XMLTV.h  addon.cpp  addon.h  client.cpp  client.h
src/base/: Cache.cpp  Cache.h  ChannelManager.h  GuideManager.h
src/libstalkerclient/: action.h  identity.h  itv.c  itv.h  param.c  param.h  request.c  request.h  stb.c  stb.h  type.h  util.c  util.h
src/libstalkerclient/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml
src/stalker/: AddonSettings.cpp  AddonSettings.h  CWatchdog.cpp  CWatchdog.h  ChannelManager.cpp  ChannelManager.h  Error.h  GuideManager.cpp  HTTPSocket.cpp  HTTPSocket.h  InstanceSettings.cpp  InstanceSettings.h  SAPI.h  SessionManager.cpp  SettingsMigration.cpp  SettingsMigration.h  Utils.cpp  Utils.h
src/stalker/base/: GuideManager.h
(+29 files in other folders)
